<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/movies_tab"
        android:icon="@drawable/ic_movies"
        android:title="@string/bnv_movies" />


    <item
        android:id="@+id/series_tab"
        android:icon="@drawable/ic_series"
        android:title="@string/bnv_tv" />

    <item
        android:id="@+id/trending_tab"
        android:icon="@drawable/ic_fire"
        android:title="@string/bnv_trending" />
</menu>